Name: William Lai
Date: 12-26-2014
Description: Alice Chess mostly working; changing ChangeLog structure
    * Alice Chess is now mostly working, but still need to check for promotion and edge cases, as well as work on AI
    * ChangeLog will no longer follow file-by-file entries, as this is a bit too restrictive
    * Fixed bugs in AliceBoard that allowed moves that left king in check
    * Merged in-progress branch into master and unpublished in-progress branch. Also set previous commit (pre-Alice Chess) as v1.0 release.

Name: Vincent Wong
Date: 01-08-2014
Description: Fixed animation when castling, moving into a green square, and game ending
    * src/chess/*ChessBoard.java: Added utility functions for conversion between (row, col) and square #
    * src/chess/*ChessGameGraphics.java: Added graphical state tracking of the board, updated once per game loop iteration. For Standard, added a castling animation
    * src/chess/*ChessGame.java: Added small loop after game ends to allow animation to finish

Name: William Lai
Date: 01-07-2014
Description: Merged restruct back into master, following changes listed are for the previous three commits together
    * src/chess/ComputerPlayer.java: Now a superclass of StandardComputerPlayer and LosersComputerPlayer.
    * src/chess/Definitions.java: Fixed a subtle bug in finding orthogonal attacks that was causing orthogonal moves to be calculated incorrectly on 6 squares on the b-file
    * src/chess/GameApplet.java: Removed duplicate call of instantiating thread, which was causing everything to be happening doubly
    * src/chess/HumanPlayer.java: Now a superclass of StandardHumanPlayer and LosersComputerPlayer.
    * src/chess/LosersChessBoard.java: Fixed bug that was causing the capture of kings to be handled improperly
    * src/chess/LosersChessGame.java: Now correctly ends game with proper message.

Name: Vincent Wong
Date: 01-05-2014